--- a/discount-program.html
+++ b/discount-program.html
@@ -312,94 +312,373 @@
 									</div>
 								</div>
 								<div class="filter-bg">
-									<h4 class="categ-title">You are looking for "<strong>Book Shops &amp; Souvenirs</strong>"</h4>
-									<div class="filter-hd">
-										<div class="title">Title</div>
-										<div class="discount">Discount</div>
-										<div class="contact">Contact</div>
+
+
+									<div class="filter-gp">
+										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
+										<div class="filter-hd">
+											<div class="title">Title</div>
+											<div class="discount">Discount</div>
+											<div class="contact">Contact</div>
+										</div>
+										<ul>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+											</ul>
 									</div>
-									<ul>
-										<li>
-											<a href="#">
-												<div class="filter-icon">
-													<img src="images/qb-logo.jpg" alt="">
-												</div>
-												<div class="filter-title">
-													<p>Business Relationship Executive</p>
-												</div>
-												<div class="filter-discount">
-													<p>5%</p>
-												</div>
-												<div class="filter-contact">
-													<p>023 222 299</p>
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<div class="filter-icon">
-													<img src="images/qb-logo.jpg" alt="">
-												</div>
-												<div class="filter-title">
-													<p>Business Relationship Executive</p>
-												</div>
-												<div class="filter-discount">
-													<p>5%</p>
-												</div>
-												<div class="filter-contact">
-													<p>023 222 299</p>
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<div class="filter-icon">
-													<img src="images/qb-logo.jpg" alt="">
-												</div>
-												<div class="filter-title">
-													<p>Business Relationship Executive</p>
-												</div>
-												<div class="filter-discount">
-													<p>5%</p>
-												</div>
-												<div class="filter-contact">
-													<p>023 222 299</p>
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<div class="filter-icon">
-													<img src="images/qb-logo.jpg" alt="">
-												</div>
-												<div class="filter-title">
-													<p>Business Relationship Executive</p>
-												</div>
-												<div class="filter-discount">
-													<p>5%</p>
-												</div>
-												<div class="filter-contact">
-													<p>023 222 299</p>
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<div class="filter-icon">
-													<img src="images/qb-logo.jpg" alt="">
-												</div>
-												<div class="filter-title">
-													<p>Business Relationship Executive</p>
-												</div>
-												<div class="filter-discount">
-													<p>5%</p>
-												</div>
-												<div class="filter-contact">
-													<p>023 222 299</p>
-												</div>
-											</a>
-										</li>
-									</ul>
+
+									<div class="filter-gp">
+										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
+										<div class="filter-hd">
+											<div class="title">Title</div>
+											<div class="discount">Discount</div>
+											<div class="contact">Contact</div>
+										</div>
+										<ul>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+											</ul>
+									</div>
+
+									<div class="filter-gp">
+										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
+										<div class="filter-hd">
+											<div class="title">Title</div>
+											<div class="discount">Discount</div>
+											<div class="contact">Contact</div>
+										</div>
+										<ul>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+											</ul>
+									</div>
+
+									<div class="filter-gp">
+										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
+										<div class="filter-hd">
+											<div class="title">Title</div>
+											<div class="discount">Discount</div>
+											<div class="contact">Contact</div>
+										</div>
+										<ul>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div class="filter-icon">
+															<img src="images/qb-logo.jpg" alt="">
+														</div>
+														<div class="filter-title">
+															<p>Business Relationship Executive</p>
+														</div>
+														<div class="filter-discount">
+															<p>5%</p>
+														</div>
+														<div class="filter-contact">
+															<p>023 222 299</p>
+														</div>
+													</a>
+												</li>
+											</ul>
+									</div>
+
+
 									<div class="loading-spinner-wrapper" id="app-loader">
 								        <span class="loading-spinner">
 								          <i class="one"></i>
