--- a/online-payment.html
+++ b/online-payment.html
@@ -324,9 +324,187 @@
 								<div class="filter-bg card-list">
 
 									<!-- Loop Area -->
-									<div class="row">
+									<div class="filter-gp">
 										<!-- Search Title -->
-										<h4 class="categ-title">You are looking for "<strong>Bus Ticket</strong>"</h4>
+										<h4 class="categ-title"><strong>Bus Ticket</strong></h4>
+										<!-- Search Title END -->
+										<div class="flex">
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
+														<p><strong>Major Cineplex</strong></p>
+														<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
+														<p><strong>Fannow</strong></p>
+														<p><span>Fannow App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+													<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
+													<p><strong>Legend Cinema</strong></p>
+													<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span href="#">Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
+														<p><strong>Major Cineplex</strong></p>
+														<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
+														<p><strong>Fannow</strong></p>
+														<p><span>Fannow App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+													<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
+													<p><strong>Legend Cinema</strong></p>
+													<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="filter-gp">
+										<!-- Search Title -->
+										<h4 class="categ-title"><strong>Bus Ticket</strong></h4>
+										<!-- Search Title END -->
+										<div class="flex">
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
+														<p><strong>Major Cineplex</strong></p>
+														<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
+														<p><strong>Fannow</strong></p>
+														<p><span>Fannow App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+													<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
+													<p><strong>Legend Cinema</strong></p>
+													<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span href="#">Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
+														<p><strong>Major Cineplex</strong></p>
+														<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
+														<p><strong>Fannow</strong></p>
+														<p><span>Fannow App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+													<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
+													<p><strong>Legend Cinema</strong></p>
+													<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="filter-gp">
+										<!-- Search Title -->
+										<h4 class="categ-title"><strong>Bus Ticket</strong></h4>
 										<!-- Search Title END -->
 										<div class="flex">
 											<div class="card-item">
