--- a/promo-single.html
+++ b/promo-single.html
@@ -241,7 +241,9 @@
 				<div class="table-cell">
 					<div class="container">
 						<div class="inner-banner-text text-left">
-							<h1>International Women’s Day Promotion</h1>
+							<span class="categ-wrap">Category Goes here</span>
+							<h1>International Women's Day Promotion</h1>
+							<p class="promo"><strong>Promo Period:</strong> Jun. 29 to Sept. 30, 2017</p>
 						</div>
 					</div>
 				</div>
@@ -253,7 +255,6 @@
 					<div class="news-single-content">
 						<div class="featured-img-wrap">
 							<img class="aligncenter" src="images/OTC-KNY-promo-for-Wed-03-EN-1200x480.jpg" alt="">
-							<span class="categ-wrap">Category Goes here</span>
 						</div>
 
 						<h2>Happy International Women's Day</h2>
@@ -319,7 +320,7 @@
     </div>
   </div>
 </div>
-			
+
       </div>
 		</div>
 		<div class="space-bottom"></div>
