update discount filters

--- a/discount-program.html
+++ b/discount-program.html
@@ -290,13 +290,20 @@
 						<div class="col-sm-12">
 								<div class="the-filter">
 									<div class="row">
-										<div class="col-sm-2">
-											<label><strong>Filter by:</strong></label>
+										<div class="col-sm-1">
+											<label><strong>Filter</strong></label>
 										</div>
-										<div class="col-sm-4 col-xs-6">
+										<div class="col-sm-4 col-xs-12">
 											<div class="input-wrap">
-												<input type="text" name="s" value="" placeholder="Search">
+												<input type="text" name="business-name" value="" placeholder="Type a business name here...">
 											</div>
+										</div>
+										<div class="col-sm-2 col-xs-6">
+											<select class="custom-select">
+												<option>Discount</option>
+												<option>5%</option>
+												<option>10%</option>
+											</select>
 										</div>
 										<div class="col-sm-3 col-xs-6">
 											<select class="custom-select">
@@ -306,7 +313,7 @@
 											</select>
 										</div>
 
-										<div class="col-sm-3 col-xs-12">
+										<div class="col-sm-2 col-xs-12">
 											<a href="#" class="btn btn-green">Submit</a>
 										</div>
 									</div>
@@ -317,7 +324,7 @@
 									<div class="filter-gp">
 										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
 										<div class="filter-hd">
-											<div class="title">Title</div>
+											<div class="title">Business Name</div>
 											<div class="discount">Discount</div>
 											<div class="contact">Contact</div>
 										</div>
@@ -408,7 +415,7 @@
 									<div class="filter-gp">
 										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
 										<div class="filter-hd">
-											<div class="title">Title</div>
+											<div class="title">Business Name</div>
 											<div class="discount">Discount</div>
 											<div class="contact">Contact</div>
 										</div>
@@ -499,7 +506,7 @@
 									<div class="filter-gp">
 										<h4 class="categ-title"><strong>Book Shops &amp; Souvenirs</strong></h4>
 										<div class="filter-hd">
-											<div class="title">Title</div>
+											<div class="title">Business Name</div>
 											<div class="discount">Discount</div>
 											<div class="contact">Contact</div>
 										</div>
