update css for testing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="hamburger-nav">
 		<a class="hv-close" href="#"></a>
 		<div class="hv-wrap">
-			<div class="header-hamburger active">
+			<div class="header-hamburger">
 				<a href="#">
 					<span></span>
 					<span></span>
@@ -309,7 +309,7 @@
 								<img class="coverimage-desktop" data-src="images/home/slide2.jpg" src="" />
 								<img class="coverimage-mobile" data-src="images/home/slide1-mobile.jpg" src="" />
 							</div>
-							
+
 							<a href="#" class="play-btn" data-videoid="2E2nCbIZ_Lc"></a>
 						</div>
 					</li>
