updated css for text

--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 		</div>
 	</header>
 	<section id="main-wrapper">
-		<div class="login-wrap fl">
-			<a href="#">Log in</a>
-			<a href="#" >Register</a>
+		<div class="login-wrap-wing">
+			<a href="#" class="get-wing-app ios">Get Wing App!</a>
+			<a href="#" class="get-wing-app and">Get Wing App!</a>
 		</div>
 		<div class="home-slider">
 			<div class="home-flexslider flexslider">
