update css inner banner inner, login wing app

--- a/inner.html
+++ b/inner.html
@@ -251,6 +251,10 @@
 		</div>
 	</div>
 	<section id="main-wrapper">
+		<div class="login-wrap-wing">
+			<a href="#" class="get-wing-app ios">Get Wing App!</a>
+			<a href="#" class="get-wing-app and">Get Wing App!</a>
+		</div>
 		 <div class="banner-inner">
 			<div class="coverimage" style="background: url('images/inner/banner.jpg') no-repeat bottom right; background-size: cover;"></div>
 			<div class="table-wrap">
