--- a/online-payment.html
+++ b/online-payment.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> <script src="js/css3-mediaqueries.js"></script> <![endif]-->
 <script src="js/html5.js"></script>
 <script src="js/lib/modernizr-2.8.3.min.js"></script>
-<script src="js/pace.min.js"></script>
+<!-- <script src="js/pace.min.js"></script> -->
 
 </head>
 <body>
