add promo listings

--- a/index.html
+++ b/index.html
@@ -346,19 +346,19 @@
 					</div>
 					<div class="col-sm-4">
 						<div class="h-news-item text-center">
-							<h5 class="h-new-title c-blue text-center">Rates</h5>
+							<h5 class="h-new-title c-blue text-center">Exchange Rates in Khmer Riel</h5>
 							<div class="rates-wrap">
 								<p><em>Updated as of <strong>January 20, 2018</strong></em></p>
 								
 								
 								<h3 class="buy-rate">
 									<i>
-										<label>Buy Rate </label><span>4,030.00</span>
+										<label>Buy </label><span>4,030.00</span>
 									</i>
 								</h3>
 								<h3 class="sell-rate">
 									<i>
-										<label>Sell Rate </label><span>4,014.00</span>
+										<label>Sell </label><span>4,014.00</span>
 									</i>
 								</h3>
 							</div>
