update biller list

--- a/index.html
+++ b/index.html
@@ -587,15 +587,18 @@
 
         responsive: {
             0: {
-                items: 1
+                items: 1,
+                margin: 16
             },
 
             480: {
-                items: 2
+                items: 2,
+                margin: 16
             },
 
             820: {
-                items: 2
+                items: 2,
+                margin: 16
             },
             1000: {
                 items: 3
